# powsybl-math-native

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  download-artifact.py  pom.xml  pom_linux_64.xml  pom_windows_64.xml  suitesparse_patch.py
.github/workflows/: ci.yml
patch/: CMakeLists.txt
patches/: suitesparse.patch
src/: jniwrapper.cpp  jniwrapper.hpp  lu.cpp  lu.hpp  native.cpp  solver.cpp  solver.hpp
src/com/powsybl/mathnative/: MathNativeJavadocPlaceholder.java  package-info.java
src/main/cpp/: gaussnewton.cpp  gaussnewton_common.cpp  gaussnewton_common.hpp  gaussnewton_klu.cpp  jniwrapper.hpp  lu.cpp  native.cpp
src/main/java/com/powsybl/mathnative/: MathNativeJavadocPlaceholder.java
src/test/java/com/powsybl/math/: AbstractMathNative.java  MathNative.java
src/test/java/com/powsybl/math/matrix/: MatrixException.java  SparseLUDecomposition.java  SparseMatrix.java
src/test/java/com/powsybl/math/solver/: GaussNewtonCholesky.java  GaussNewtonKLU.java  Kinsol.java  KinsolContext.java  KinsolException.java  KinsolResult.java  KinsolSolver.java  NativeBuffers.java  NewtonKrylovSolver.java  NewtonKrylovSolverContext.java  NewtonKrylovSolverException.java  SolverException.java
src/test/java/com/powsybl/mathnative/: GaussNewtonBenchTest.java  GaussNewtonCholeskyTest.java  GaussNewtonKLUTest.java  GaussNewtonLMTest.java  GaussNewtonRankTest.java  KinsolTest.java  MatrixTest.java  SolverTest.java
